<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".Quick_Route"
    tools:visibility="visible">


    <!--dependent spinner-->
    <Spinner
        android:id="@+id/spinner_Start_Building"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="142dp"
        android:layout_marginBottom="248dp"
        android:entries="@array/Start_Buildings"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/button_GetRoute"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button_GoToMA"
        android:layout_width="146dp"
        android:layout_height="48dp"
        android:layout_marginStart="132dp"
        android:layout_marginLeft="132dp"
        android:layout_marginTop="332dp"
        android:text="@string/previous"

        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_Start_Building"
        tools:visibility="visible" />

    <Spinner
        android:id="@+id/spinner_Dest_Building"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="289dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button_GetRoute"
        android:layout_width="146dp"
        android:layout_height="48dp"
        android:layout_marginStart="132dp"
        android:layout_marginLeft="132dp"
        android:layout_marginTop="264dp"
        android:text="@string/Get_Route"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_Start_Building"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="126dp"
        android:layout_height="40dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="60dp"
        android:text="@string/Destination_Building"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_Start_Building"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="126dp"
        android:layout_height="40dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="279dp"
        android:layout_marginRight="279dp"
        android:text="@string/Start_Building"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>