...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_today"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/button_GoToQR"
        android:layout_width="96dp"
        android:layout_height="70dp"
        android:layout_marginEnd="165dp"
        android:layout_marginRight="165dp"
        android:layout_marginBottom="316dp"
        android:contentDescription="@string/Quick_Route"
...
